B-F Sandbox Full-Backup/src/objects/Application__c.object
<CustomObject>
    <description>Force.com Application(s) that is either proposed or slated to be developed on the the Force.com platform</description>
    <fields>
        <fullName>Another_cloud_provider_that_meets_needs__c</fullName>
        <inlineHelpText>Is there another cloud provider that meets the needs?</inlineHelpText>
        <label>Another cloud provider that meets needs</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>App_Good_Fit_fr_PaaS_infrastrture_per_ab__c</fullName>
        <inlineHelpText>Is application (or set or redundant applications) a ‘Good Fit’ for PaaS infrastructure given criteria defined above?</inlineHelpText>
        <label>App Good Fit fr PaaS infrstr per above</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>App_redundant_with_other_existng_systems__c</fullName>
        <inlineHelpText>Is the application redundant with other existing systems?</inlineHelpText>
        <label>App redundant with other existng systems</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Administration_by_Business_U__c</fullName>
        <label>Application Administration by Users</label>
        <picklist>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_ID__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Application ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Application_Platform__c</fullName>
        <label>Application Platform</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approx_LOE__c</fullName>
        <label>Approx LOE</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Are_there_regulatory_or_contractual_obli__c</fullName>
        <label>Regulatory or Contractual Obligations</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assumptions__c</fullName>
        <label>Assumptions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Auditing_Compliance_Check__c</fullName>
        <label>Auditing &amp; Compliance Check?</label>
        <picklist>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit/Department?</label>
        <picklist>
            <picklistValues>
                <fullName>All BPOs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate  Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPA and Field Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern Comfort Brand Team</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Can_app_be_developed_on_Force_com__c</fullName>
        <inlineHelpText>Can the application be developed on the Force.com platform?</inlineHelpText>
        <label>Can app be developed on Force.com</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conforms_to_current_future_arch_stds__c</fullName>
        <inlineHelpText>Does the application conform to current and future architectural standards?</inlineHelpText>
        <label>Conforms to current/future arch stds</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content-only websites?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Database_Platform__c</fullName>
        <label>Current Database Platform?</label>
        <picklist>
            <picklistValues>
                <fullName>MS Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS Excel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R/3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Platform__c</fullName>
        <label>Current Platform</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Technology_Platform__c</fullName>
        <label>Current Technology/Platform</label>
        <picklist>
            <picklistValues>
                <fullName>MS Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS Excel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS Access/Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP Business Explorer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Entry_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Entry Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Migration__c</fullName>
        <label>Data Migration</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Required__c</fullName>
        <label>Date Required</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Capabilities__c</fullName>
        <label>Email Capabilities?</label>
        <picklist>
            <picklistValues>
                <fullName>Outbound Emails</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected__c</fullName>
        <label>Expected Quarter for Go-Live(per B-F)</label>
        <picklist>
            <picklistValues>
                <fullName>Q1 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2 2011</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Global__c</fullName>
        <label>Global Vs Regional?</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>High__c</fullName>
        <label>High Level Use Case</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>High_cost_to_maintain_or_upgrade_App__c</fullName>
        <inlineHelpText>Is there a high cost to maintain  and/or upgrade the application?</inlineHelpText>
        <label>High cost to maintain  &amp;/or upgrade App</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hosted_or_On_Premise__c</fullName>
        <label>Hosted or On-Premise?</label>
        <picklist>
            <picklistValues>
                <fullName>Hosted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Premise</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_Private_how_can_data_be_shared_acros__c</fullName>
        <label>If Private,how data is shared to users</label>
        <picklist>
            <picklistValues>
                <fullName>By Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>By Role</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_Yes__c</fullName>
        <label>If Yes,list Potential systems</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implement_Third_Party__c</fullName>
        <label>Implement Third Party Services?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Key_Contacts__c</fullName>
        <label>Key Contacts</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mission_of_the_Application__c</fullName>
        <label>Mission of the Application</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_Interface__c</fullName>
        <label>Mobile Interface</label>
        <picklist>
            <picklistValues>
                <fullName>Multiple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Multi_Currency_Support__c</fullName>
        <label>Multi-Currency Support?</label>
        <picklist>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Multi_Language__c</fullName>
        <label>Multi-Language Support?</label>
        <picklist>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_Users__c</fullName>
        <label>No of Users</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offline__c</fullName>
        <label>Offline Access</label>
        <picklist>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>On_going_Data_Transfer_with_Other_system__c</fullName>
        <label>On-going Data Transfer with Other system</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes- real time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes- real time/batch ok</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Per_biz_risk_tolerance_app_be_on_cloud__c</fullName>
        <inlineHelpText>Based on the Organization’s tolerance for risk , can the application be in the cloud?</inlineHelpText>
        <label>Per biz risk tolerance, app be on cloud</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Public_Read_Only_or_Public_Read__c</fullName>
        <label>Private/Public Read Only or Public Read</label>
        <picklist>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Read-Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Read-Write</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Questions__c</fullName>
        <label>Questions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reports__c</fullName>
        <label>Reports and Analytics?</label>
        <picklist>
            <picklistValues>
                <fullName>Basic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sample__c</fullName>
        <formula>IMAGE(&quot;https://c.na1.content.force.com/servlet/servlet.FileDownload?file=01530000001sLew&quot;, &quot;Cloud Decision Matrix&quot;,170, 770)</formula>
        <label>Sample</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope (Screen/Objects)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Scope_of_Data_Cleansing__c</fullName>
        <label>Scope of Data Cleansing?</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scope_of_automation_of_business_logic__c</fullName>
        <label>Scope of automation of business logic?</label>
        <picklist>
            <picklistValues>
                <fullName>Low(&lt;5 Rules)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium(5-15)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very High(30-50)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Process</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved, Awaiting Sponsor Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsor Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release Date Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Development In-Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed, Awaiting Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed, Deployed to Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected, Not a Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected, Not Enough Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected, AppExchange Product Exists</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supports_active_biz_fns_provides_value__c</fullName>
        <inlineHelpText>Does the application support active business functions, and provide value?</inlineHelpText>
        <label>Supports active biz fns &amp; provides value</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supports_revenue_generating_activities__c</fullName>
        <inlineHelpText>Does the application support revenue generating activities (billing, A/R, etc)</inlineHelpText>
        <label>Supports revenue generating activities</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technical_Design__c</fullName>
        <description>This field is used to enter the sum of Technical Design hours from all requirements associated to this application work package.</description>
        <inlineHelpText>This field is used to enter the sum of Technical Design hours from all requirements associated to this application work package.</inlineHelpText>
        <label>Technical Design</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_Of_Data_Content__c</fullName>
        <label>Type Of Data / Content</label>
        <picklist>
            <picklistValues>
                <fullName>Structured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unstructured</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of__c</fullName>
        <label>Type of User Interface</label>
        <picklist>
            <picklistValues>
                <fullName>Browser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rich Client</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volume_of_Data__c</fullName>
        <label>Volume of Data</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;50k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50k-100k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;100k</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>current_user_acceptance__c</fullName>
        <label>Current User Acceptance of Application</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>need_for_Business_Process_Imp__c</fullName>
        <label>Need for Business Process Improvement?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>need_to_handle_Sensitive_Secu__c</fullName>
        <label>Need to Handle Sensitive/Secure Data</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Priority__c</columns>
        <columns>NAME</columns>
        <columns>Mission_of_the_Application__c</columns>
        <columns>Key_Contacts__c</columns>
        <columns>No_of_Users__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>